trunk/Archive2/49/3c245158dcb3a4/output
main.cpp: In lambda function:
main.cpp:18:45: error: 'class std::promise<int>' has no member named 'set_value_at_thread_exit'
     std::thread( [](std::promise<int> p){ p.set_value_at_thread_exit(9); }, 
                                             ^
